workspace: remove sleep inhibitor if the dpms animation is canceled

BUG: 523001

(cherry picked from commit 1e702e03edf8b0b0212a9d371901c901322f4feb)

Co-authored-by: Ameen Al-Asady <ameenaladdin@gmail.com>